Fix still visible cursor
Hide all cursors in production screens

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,7 +18,7 @@ body {
 	height: 100%;
 }
 
-.production {
+.production * {
 	cursor: none;
 }
 
